--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Jun 26 11:35:39 PET 2019
-sdk.dir=/home/os/Android/Sdk
+#Tue Jul 02 18:22:06 COT 2019
+sdk.dir=C\:\\Users\\osman\\AppData\\Local\\Android\\Sdk
